chore(docs): fix typos, update wording and formatting

--- a/docs/repetitorium/part two/Objektorientierte Analyse/domänenmodell.tex
+++ b/docs/repetitorium/part two/Objektorientierte Analyse/domänenmodell.tex
@@ -18,7 +18,7 @@ Es beschreibt damit
 \end{itemize}
 
 \noindent
-Als Artefakt der Analyse gilt für das Domänenmodell, dass auf eine Darstellung technischer Gesichtspunkte verzichtet wird.\\
+Als \textbf{Artefakt der Analyse} gilt für das Domänenmodell, dass auf eine Darstellung technischer Gesichtspunkte verzichtet wird.\\
 
 \noindent
 Für die weitere Arbeit ist das Domänenmodell
@@ -49,7 +49,7 @@ Die einzelnen Teile des Modells können systematisch ermittelt werden, bspw. in 
 \end{enumerate}
 
 \subsection*{Klassen ermitteln}
-Hauptwörter in den in den Anforderungen erfassten User Storys oder Anwendungsfällen stehen meistens für \textbf{Klassen}, \textbf{Objekte} oder \textbf{Attribute}.
+Werden \textbf{User Stories} oder \textbf{Anwendungsfälle} erfasst, stehen die \textit{Hauptwörter} in den Anforderungen meistens für \textbf{Klassen}, \textbf{Objekte} oder \textbf{Attribute}.
 
 \subsection*{Assoziationen}
 \textbf{Assoziationen} erkennt man an Beschreibungen wie
@@ -73,7 +73,7 @@ Hinter den Formulierungen \textit{hat} und \textit{besitzt} verbergen sich auch 
 \textbf{Attribute} sind Informationen, die eine Klasse besitzt und pflegt.
 
 \subsection*{Vererbungsbeziehungen}
-\textbf{Vererbungsbeziehungen} erkennt man daran, dass Daten oder Verhalten mehrere Klassen identisch sind.
+\textbf{Vererbungsbeziehungen} erkennt man daran, dass Daten oder Verhalten mehrerer Klassen identisch sind.
 
 \vspace{2mm}
 \begin{tcolorbox}
@@ -98,7 +98,7 @@ Zum typischen Verhalten gehören bspw.
 \end{itemize}
 
 \subsection*{Anzahl der Verantwortlichkeiten einer Klasse}
-Wenn eine Verantwortlichkeit nicht eindeutig einer Klasse zugeordnet werden kann, sollte man überprüfen, ob ein Fehler in der Modellierung vorliegt oder ob explizit eine Klasse modelliert werden muss, die diese Verantwortung trägt.\\
+Wenn eine Verantwortlichkeit nicht eindeutig einer Klasse zugeordnet werden kann, sollte man überprüfen, ob ein Fehler in der Modellierung vorliegt oder ob explizit eine Klasse modelliert werden muss, die diese Verantwortlichkeit trägt.\\
 
 \noindent
 Klassen sollten max. ein bis zwei Verantwortlichkeiten haben.\\
