docs: add statechart diagram example

--- a/docs/repetitorium/literatur.bib
+++ b/docs/repetitorium/literatur.bib
@@ -223,6 +223,15 @@ and Rundshagen, Michael",
 }
 
 
+@BOOK{Bal05,
+    title     = "Lehrbuch der Objektmodellierung",
+    author    = "Balzert, Heide",
+    publisher = "Spektrum Akademischer Verlag",
+    year      =  2005,
+    isbn      = {3827411629},
+}
+
+
 @inbook{CL01,
     author = {Constantine, Larry L. and Lockwood, Lucy A. D.},
     title = {Structure and style in use cases for user interface design},
