docs: add activity diagram example

--- a/docs/repetitorium/part one/Requirements Engineering/funktionaleanforderungen.tex
+++ b/docs/repetitorium/part one/Requirements Engineering/funktionaleanforderungen.tex
@@ -7,14 +7,14 @@
 \vspace{5mm}
 
 \noindent
-Ein weit verbreiteter Ansatz zur Erarbeitung von Anforderungen ist die Erfassung von \textbf{Anwendungsfällen} (\textit{Use Case}), oder auch von \textbf{User Storys}.\\
+Ein weit verbreiteter Ansatz zur Erarbeitung von Anforderungen ist die Erfassung von \textbf{Anwendungsfällen} (\textit{Use Case}), oder auch von \textbf{User Stories}.\\
 
 \noindent
 Die Verfahren können gleichzeitig eingesetzt werden, da sind unterschiedlich detailliert sind und andere Perspektiven beleuchten.
 
 \subsection*{User Story}
 
-\textbf{User Storys} beschreiben in ein bis zwei Sätzen, wie ein Endanwender mit dem System arbeiten möchte, bspw. ``Der Vertrieb bezieht aus dem System die Wiedervorlageliste und protokolliert die durchgeführten Gespräche`` (s. a. Aufgabe 4.13. in \cite{Wed09}).\\
+\textbf{User Stories} beschreiben in ein bis zwei Sätzen, wie ein Endanwender mit dem System arbeiten möchte, bspw. ``Der Vertrieb bezieht aus dem System die Wiedervorlageliste und protokolliert die durchgeführten Gespräche`` (s. a. Aufgabe 4.13. in \cite{Wed09}).\\
 
 \noindent
 Eine \textbf{User Story} ist aufgrund der fehlenden Details als eine Art \textbf{Merkhilfe} für Stakeholder und Entwickler zu verstehen, und nicht als formale Beschreibung eines Prozesses; idealerweise werden die Storys von den Stakeholdern erstellt.\\
@@ -25,7 +25,7 @@ User Stories sind dazu geeignet, ``die Welt des Kunden zu verstehen``\footnote{
 }.\\
 
 \noindent
-Es kann durchaus passieren, dass sich User Storys widersprechen, wenn mehrere unterschiedliche Stakeholder die Storys erstellen.\\
+Es kann durchaus passieren, dass sich User Stories widersprechen, wenn mehrere unterschiedliche Stakeholder die Storys erstellen.\\
 
 \noindent
 Auf eine \textit{exakte und detaillierte} Beschreibung der einzelnen Storys wird \textit{verzichtet}, da davon ausgegangen wird, dass die Stellvertreter der Endanwender jederzeit erreichbar sind.\\
