--- a/docs/repetitorium/part one/Requirements Engineering/zusammenfassung.tex
+++ b/docs/repetitorium/part one/Requirements Engineering/zusammenfassung.tex
@@ -12,7 +12,7 @@
         \begin{itemize}
             \item funktionale Anforderungen werden als \textbf{Use Case} oder \textbf{User Story} erfaßt.
             \item Anwendungsfälle (Use Cases) können hierbei sehr detailliert und formell beschrieben werden.
-            \item User Storys sind i.d.R. wenig detailliert und beschreiben nur kurz den Umgang des Endanwenders mit dem System.
+            \item User Stories sind i.d.R. wenig detailliert und beschreiben nur kurz den Umgang des Endanwenders mit dem System.
             \item für die Planung von Steueranwendungen (Hardware) können auch \textbf{Ereignistabellen} verwendet werden.
         \end{itemize}
     \item nicht-funktionale Anforderungen sind technische und organisatorische Anforderungen, die üblicherweise in Form von Listen gesammelt werden
