--- a/docs/repetitorium/part two/Objektorientierte Analyse/modellierung der dynamik.tex
+++ b/docs/repetitorium/part two/Objektorientierte Analyse/modellierung der dynamik.tex
@@ -34,13 +34,22 @@ Die grafische Darstellung dieses Verhaltens erreicht man über \textbf{UML-Zusta
 Bei Zustandsdiagrammen erschließt sich der Ablauf von Aktivitäten meist nur indirekt, da bspw. keine Auskunft über die beteiligten Akteure modelliert werden können.\\
 
 \noindent
-Aus diesem Grund verwendet man \textbf{UML-Aktivitätsdiagramm}, in denen Aktivitäten in ihrer möglichen Abfolge und ihrer Zuordnung zu Akteuren modelliert werden.\\
+Aus diesem Grund verwendet man \textbf{UML-Aktivitätsdiagramm}\footnote{
+s. ``15 Activities``, S. 373, \url{https://www.omg.org/spec/UML/2.5.1/PDF}, abgerufen 22.04.2024
+}, in denen Aktivitäten in ihrer möglichen Abfolge und ihrer Zuordnung zu Akteuren modelliert werden (s. Abbildung~\ref{fig:activitydiagram}).\\
+
+\begin{figure}
+    \centering
+    \includegraphics[scale=0.5]{part two/Objektorientierte Analyse/img/activitydiagram}
+    \caption{Beispiel für ein Aktivitätsdiagram (\textit{activity diagram}). (Quelle: in Anlehnung an~\cite[77, Abb. 2.9-14]{Bal05})}
+    \label{fig:activitydiagram}
+\end{figure}
 
 \noindent
-Darüberhinaus kann mit Aktivitätsdiagrammen  auch der Fluss von Informationen un die Auswirkung auf Objekte dargestellt werden.\\
+Darüberhinaus kann mit Aktivitätsdiagrammen  auch der Fluss von Informationen und die Auswirkung auf Objekte dargestellt werden.\\
 
 \vspace{2mm}
 \begin{tcolorbox}
-Aktivitätsdiagramme sind zur Modellierung von User Storys, Szenarien oder Anwendungsfällen geeignet.
+Aktivitätsdiagramme sind zur Modellierung von User Stories, Szenarien oder Anwendungsfällen geeignet.
 \end{tcolorbox}
 \vspace{2mm}
