chore(docs): update wording and formatting

--- a/docs/repetitorium/part two/Objektorientierte Analyse/dialogentwurf.tex
+++ b/docs/repetitorium/part two/Objektorientierte Analyse/dialogentwurf.tex
@@ -62,19 +62,19 @@ Bei den Bedienkonzepten unterscheidet man zwischen \textbf{objektorientiertem}\f
 \subsubsection*{Dialogablaufplan}
 Einzelne Dialoge werden als Rechtecke dargestellt und mit ihren Titeln versehen.\\
 Übergänge zwischen den Dialogen werden als Pfeile dargestellt.\\
-In einem separaten Dokument kann für jeden Dialog der INhalt festgehalten werden (in tabellarischer Form also Eingabefelder, mögliche Aktionen...).
+In einem separaten Dokument kann für jeden Dialog der Inhalt festgehalten werden (in tabellarischer Form also Eingabefelder, mögliche Aktionen...).
 
 \subsubsection*{Physische Form}
 Neben der \textbf{logischen} ist auch die \textbf{äußere Gestalt} zu entwerfen, die \textbf{physische Form}.\\
-Hierbei wird u.a. entschieden, ob die Anwendung aus einem komplexen Fenster besteht, in dem sich Teile ändern (die einzelnen Kacheln, \textit{Tiles}, wie bspw. in einem Email-Programm), ob sich der INhalt des Fensters ändert (bspw. \textit{Wizards}), oder ob es mehrere Fenster geben soll.\\
+Hierbei wird u.a. entschieden, ob die Anwendung aus einem komplexen Fenster besteht, in dem sich Teile ändern (die einzelnen Kacheln, \textit{Tiles}, wie bspw. in einem Email-Programm), ob sich der Inhalt des Fensters ändert (bspw. \textit{Wizards}), oder ob es mehrere Fenster geben soll.\\
 I.d.R. sind bei großen Anwendungen Mischlösungen anzutreffen, wo bspw. der \textbf{Primärdialog} in einem gekachelten Fenster implementiert ist und \textbf{Sekundärdialoge} in anderen Fenstern.\\
 
 \noindent
 Anschließend kann der genaue Inhalt und das graphische Aussehen bestimmt werden.
 
 \subsubsection*{Prototyping}
-Das \textbf{Prototyping} kann bspw. über Mockups bzw. Wireframes realisiert werden, oder auc mit Bleistift und Papier.\\
-In jedem Fall sind so Änderungswünsche in einem Kundengespräch schnell und unkompliziert durchgeführt.
+Das \textbf{Prototyping} kann bspw. über Mockups bzw. Wireframes realisiert werden, oder auch mit Bleistift und Papier.\\
+Änderungswünsche können somit in einem Kundengespräch schnell und unkompliziert erfasst werden.
 
 \subsection{Ergonomie}
 Mit dem Begriff \textbf{Software-Ergonomie} (\textit{Usability}) wird die \textbf{Benutzbarkeit} bzw. \textbf{Gebrauchstauglichkeit} von Software bezeichnet.\\
@@ -84,13 +84,12 @@ Die Ergonomie ist wichtig, damit
 
 \begin{itemize}
     \item die Anwendung von den Benutzern akzeptiert wird
-    \item die Benutzer längere Zeit ohne phsysische und psychische Ermüdungserscheinungen arbeiten können\footnote{
-    in Deutschland bspw. geregelt über die \textit{Bildschirmarbeitsverordnung}, wenn Softwrae für kommerzielle Zwecke eingesetzt wird.
+    \item die Benutzer längere Zeit ohne physische und psychische Ermüdungserscheinungen arbeiten können\footnote{
+    in Deutschland bspw. geregelt über die \textit{Bildschirmarbeitsverordnung}, wenn Software für kommerzielle Zwecke eingesetzt wird.
+    }\footnote{
+        in Sicherheitskritischen Bereichen wie der Luftfahrt ist Ergonomie wichtig, da Ermüdungserscheinungen fatale Folgen haben können.
     }
 \end{itemize}
-
-\noindent
-In Sicherheitskritischen Bereichen wie der Luftfahrt ist Ergonomie wichtig, da Ermüdungserscheinungen fatale Folgen haben können.\\
 
 \noindent
 Das Ziel der \textbf{User Experience} (\textbf{UX}, \textit{Nutzungserlebnis}) ist ein möglichst angenehmes Nutzungserlebnis, was nicht unbedingt mit einer guten Ergonomie verbunden ist.\\
@@ -125,12 +124,12 @@ Für die Gestaltung von Benutzeroberflächen ist insb. Teil 110 \textit{Grundsä
 \begin{itemize}
     \item \textbf{Aufgabenangemessenheit}: Ein Dialog ist den Aufgaben angemessen, wenn er die Benutzer unterstützt, die Aufgaben effektiv und effizient zu erledigen.
     \item \textbf{Selbstbeschreibungsfähigkeit}: Für die Benutzer ist jederzeit offensichtlich, im welchem Dialog und an welcher Stelle im Dialog sie sich befinden, welche Handlungen unternommen werden und wie diese ausgeführt werden können.
-    \item \textbf{Steuerbarkeit}: Der Benutzer ist in der lage, den Dialogablauf zu starten und seine Richtung und Geschwindigkeit zu ändern, bis das Ziel erreicht ist (bspw. Rückgängigmachfunktion, Vor-/Zurück-Buttons \ldots).
-    \item \textbf{Erwartungskonformität}: Ein Dialog ist erwartungskonform, wenn er konsistent ist und den Merkmalen des Benutzers entspricht (Kenntnisse Arbeitsgebiet, Ausbildung, Erfahrung, allgemein anerkannter Konventionen, bspw. einheitliche Verwendung von Funktionscodes und Funktionstasten in allen Dialogen).
-    \item \textbf{Fehlertoleranz}: Das beabsichtigten Arbeitsergebnis wird trotz erkennbar fehlerhafter Eingaben mit keinem oder \textbf{minimalen Korrekturaufwand} seitens des Benutzers erreicht.
+    \item \textbf{Steuerbarkeit}: Der Benutzer ist in der Lage, den Dialogablauf zu starten und seine Richtung und Geschwindigkeit zu ändern, bis das Ziel erreicht ist (bspw. Rückgängigmachfunktion, Vor-/Zurück-Buttons \ldots).
+    \item \textbf{Erwartungskonformität}: Ein Dialog ist erwartungskonform, wenn er konsistent ist und den Merkmalen des Benutzers entspricht (Kenntnisse Arbeitsgebiet, Ausbildung, Erfahrung, allgemein anerkannte Konventionen, bspw. einheitliche Verwendung von Funktionscodes und Funktionstasten in allen Dialogen).
+    \item \textbf{Fehlertoleranz}: Das beabsichtigte Arbeitsergebnis wird trotz erkennbar fehlerhafter Eingaben mit keinem oder \textbf{minimalen Korrekturaufwand} seitens des Benutzers erreicht.
     \item \textbf{Individualisierbarkeit}: Das Dialogsystem erlaubt Anpassungen an Erfordernisse der Arbeitsaufgabe sowie individuelle Fähigkeiten und Vorlieben des Benutzers.
     \item \textbf{Lernförderlichkeit}: Der Benutzer wird beim Erlernen des Dialogs unterstützt und angeleitet.
 \end{itemize}
 
 \subsubsection*{Barrierefreiheit}
-Unter Barrierefreiheit \textit{Accessibility} versteht man, dass eine Software so gestaltet ist, dass auch Menschen mit Behinderungen mit dieser Software arbeiten können.
+Unter Barrierefreiheit (\textit{Accessibility}) versteht man, dass eine Software so gestaltet ist, dass auch Menschen mit Behinderungen mit dieser Software arbeiten können.
