chore(docs): update wording and formatting

--- a/docs/repetitorium/part two/Objektorientierte Analyse/zusammenfassung.tex
+++ b/docs/repetitorium/part two/Objektorientierte Analyse/zusammenfassung.tex
@@ -12,6 +12,6 @@
     \item Bei der Analyse kommen außerdem Analysemuster zum Einsatz: Muster beschreiben Lösungskizzen verallgemeinerter Probleme
     \item[] Sie helfen, indem sie \textbf{bewährte Lösungen} beschreiben und ein \textbf{Kommunikationsmittel} darstellen
     \item Die wichtigsten Analysemuster sind \textbf{Exemplartyp}, \textbf{Wechselnde Rollen} und \textbf{Allgemeine Hierarchie}.
-    \item Die Gestaltung der Benutzeroberfläche ist Bestandteil der Analyse, wobei logische Struktur, die Informationsarchitektur und die physische Gestalt entworfen wird.
+    \item Die Gestaltung der Benutzeroberfläche ist Bestandteil der Analyse, wobei logische Struktur, die Informationsarchitektur und die physische Gestalt entworfen werden.
     \item[] Ergonomie und Barrierefreiheit sind wichtige Punkte, die dabei beachtet werden müssen.
 \end{itemize}
