chore(docs): update wording and formatting

--- a/docs/repetitorium/part two/Architektur/softwarearchitektur.tex
+++ b/docs/repetitorium/part two/Architektur/softwarearchitektur.tex
@@ -3,7 +3,7 @@
 Die \textbf{Softwarearchitektur} beschreibt den grundlegenden Aufbau einer Softwarelösung.\\
 
 \noindent
-Dabei beantwortet eine Softwarearchitektur typische fragen wie
+Dabei beantwortet eine Softwarearchitektur typische Fragen wie
 
 \begin{itemize}
     \item wird die Anwendung auf einem Rechner ausgeführt oder auf mehreren?
@@ -16,13 +16,13 @@ Dabei beantwortet eine Softwarearchitektur typische fragen wie
 \end{itemize}
 
 \subsection*{Architektur am Anfang}
-Die Beantwortung dieser Fragen hat entscheidende Auswirkungen auf die weitere Entwicklung der Software, deshalb sollten Softwarearchitekten bereits bei der Klärung der \textbf{Geschäftsanforderungen} (s.a. Abschnitt~\ref{sec:lastenheft-vision-scope}) beteiligt sein.\\
+Die Beantwortung dieser Fragen hat entscheidende Auswirkungen auf die weitere Entwicklung der Software, deshalb sollten Softwarearchitekten bereits beteiligt sein, wenn es um die Klärung der \textbf{Geschäftsanforderungen} geht (s.a. Abschnitt~\ref{sec:lastenheft-vision-scope}).\\
 
 \noindent
 Dabei liefern Architekten \textbf{Aufwandsabschätzungen}, die die Wirtschaftlichkeit beeinflussen können, und überprüfen die Machbarkeit von Ideen.\\
-Hierbei entsteht eine Rückkoppelungsschleife, da Ideen zum Produkt zu Fragen und Aussagen zur Softwarearchitektur führen, die wiederum die Ideen zum Produkt beeinflussen (vgl.\cite[37]{Wed09b})
+Hierbei entsteht eine Rückkoppelungsschleife, da Ideen zum Produkt zu Fragen und Aussagen zur Softwarearchitektur führen, die wiederum die Ideen zum Produkt beeinflussen (vgl.\cite[37]{Wed09b}).
 
-\subsection*{Grundlage Anforderungen und Randbedingungen}
+\subsection*{Grundlage: Anforderungen und Randbedingungen}
 Grundlage für die Auswahl einer Softwarearchitektur sind die \textbf{Anforderungen} und \textbf{Randbedingungen}.
 
 \vspace{2mm}
@@ -33,14 +33,14 @@ Grundlage für die Auswahl einer Softwarearchitektur sind die \textbf{Anforderun
 \vspace{2mm}
 
 \noindent
-Generell wird also zunächst festgestellt, welche Auswirkungen die Randbedingungen im Hinblick auf Vorgaben oder Einschränkungen haben, anschließend wird entsprechend ihrer Gewichtung dafür gesorgt, dass die Architektur die nicht-funktionalen Anforderungen erfüllt.
+Generell wird also zunächst festgestellt, welche Auswirkungen die Randbedingungen im Hinblick auf Vorgaben oder Einschränkungen haben, anschließend wird entsprechend ihrer \textit{Gewichtung} dafür gesorgt, dass die Architektur die nicht-funktionalen Anforderungen erfüllt.
 
 \subsection*{Taktiken}
 \textbf{Taktiken} sind \textbf{Standardlösungen}, wie eine Architektur auf grundlegende Art und Weise nicht-funktionale Anforderungen erfüllbar machen kann.\\
 Unter \textit{Taktik} versteht man bspw., wie hoch-verfügbare Systeme strukturiert und gebaut werden können.
 
 \subsection*{Referenzarchitekturen und Frameworks}
-\textbf{Referenzarchitekturen} sind \textbf{Referenzmodelle}, die bei der Entwicklung einer Architektur hinzugezogen werden können.\\
+\textbf{Referenzarchitekturen} sind \textbf{Referenzmodelle}, die bei der Entwicklung einer Architektur hinzugezogen werden können, wie bspw. \textbf{Aktive Redundanz}\footnote{s. Glossar}.\\
 
 \noindent
 Diese werden häufig durch vorgefertigte Frameworks unterstützt bzw. realisiert.
