chore(docs): update wording and formatting

--- a/docs/repetitorium/part two/Architektur/zusammenfassung.tex
+++ b/docs/repetitorium/part two/Architektur/zusammenfassung.tex
@@ -4,7 +4,7 @@
 \begin{itemize}
     \item Der grundlegende Aufbau einer Software wird über die \textbf{Softwarearchitektur} beschrieben.
     \item Die Architektur sollte aufgrund ihrer grundsätzlichen Bedeutung von Anfang an berücksichtigt werden.
-    \item Grundlage für eine Architektur sind Anforderungen udn Randbedingungen, wobei \textbf{nicht-funktionale Anforderungen} und \textbf{Randbedingungen} entscheidenden Einfluss haben.
+    \item Grundlage für eine Architektur sind Anforderungen und Randbedingungen, wobei \textbf{nicht-funktionale Anforderungen} und \textbf{Randbedingungen} entscheidenden Einfluss haben.
     \item Hilfsmittel für eine Softwarearchitektur sind \textbf{Taktiken}, \textbf{Muster} (bspw. Client-Server, Schichtenbildung) und \textbf{Referenzarchitekturen}.
     \item Die Dokumentation von Architekturen erfolgt in \textbf{Sichten}.
 \end{itemize}
