chore(docs): update wording and formatting

--- a/docs/repetitorium/part two/Objektorientierter Entwurf/beispiel eines entwurfs.tex
+++ b/docs/repetitorium/part two/Objektorientierter Entwurf/beispiel eines entwurfs.tex
@@ -20,7 +20,7 @@
 
 \noindent
 Sollten außerdem Erfahrung mit Entwurfsmustern und (eingesetzten) Programmiersprachen und Frameworks fehlen, empfiehlt es sich, zunächst kleinteilig zu entwerfen und im Anschluss zu implementieren (\textit{Prove it with code}, \textit{Model in small increments}).
-Er weist aber darauf hin, dass dieses Vorgehen den Nachteil hat, dass Probleme in späteren Teilen entstehen können, wenn bestimmte Funktionalität (oder auch Muster) nicht erkannt wurde und diese nachträglich eingefügt werden muß.\\
+Er weist aber darauf hin, dass dieses Vorgehen den Nachteil hat, dass Probleme in späteren Teilen entstehen können, wenn eine bestimmte Funktionalität (oder auch Muster) nicht erkannt wurde und diese nachträglich eingefügt werden muß.\\
 Er empfiehlt, Prototypen zu bauen\footnote{
     \textit{Throw-Aways} - also Prototypen, die verworfen werden
 }.\\
